(fix): more linting issues...

--- a/src/app/modules/blockchain/marketing/v2/rewards.component.html
+++ b/src/app/modules/blockchain/marketing/v2/rewards.component.html
@@ -67,7 +67,8 @@
           <p
             class="m-marketing__description"
             i18n="
-              @@BLOCKCHAIN__MARKETING__EARN_DAILY_TOKENS_FOR_POPULAR_CONTENT"
+               @@BLOCKCHAIN__MARKETING__EARN_DAILY_TOKENS_FOR_POPULAR_CONTENT
+            "
           >
             Earn daily tokens for creating popular content or referring your
             friends. Your rewards get multiplied the more active you are on the
