--- a/src/app/modules/blockchain/marketing/v2/token.component.html
+++ b/src/app/modules/blockchain/marketing/v2/token.component.html
@@ -109,8 +109,9 @@
                 </a>
                 <span
                   i18n="
-                    (hold) your tokens
-                    onchain|@@TOKEN_MARKETING__YOUR_TOKENS_ONCHAIN"
+                     (hold) your tokens
+                    onchain|@@TOKEN_MARKETING__YOUR_TOKENS_ONCHAIN
+                  "
                   >your tokens on-chain</span
                 >
               </li>
