--- a/src/app/modules/media/modal/modal.component.html
+++ b/src/app/modules/media/modal/modal.component.html
@@ -415,8 +415,9 @@
                     this.contentType !== 'rich-embed'
                   "
                   [ngClass]="{
-                    'mdl-color-text--red-500':
-                      attachment.isForcefullyShown(entity)
+                    'mdl-color-text--red-500': attachment.isForcefullyShown(
+                      entity
+                    )
                   }"
                 >
                   <i class="material-icons m-material-icons-inline">explicit</i>
