--- a/src/app/modules/notifications/notification.component.html
+++ b/src/app/modules/notifications/notification.component.html
@@ -272,8 +272,9 @@
                   !notification.entityObj.title
                 "
                 i18n="
-                  object belonging to
-                  user@@NOTIFICATIONS__NOTIFICATION__OTHER_OBJECT"
+                   object belonging to
+                  user@@NOTIFICATIONS__NOTIFICATION__OTHER_OBJECT
+                "
                 >{{ notification.entityObj.ownerObj.name }}'s
                 {{ notification.entityObj.subtype }}</span
               >
@@ -285,8 +286,9 @@
                   !notification.entityObj.title
                 "
                 i18n="
-                  object belonging to current
-                  user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT"
+                   object belonging to current
+                  user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT
+                "
                 >your {{ notification.entityObj.subtype }}</span
               >
             </p>
@@ -305,7 +307,8 @@
             <p>
               <ng-container
                 i18n="
-                  @@NOTIFICATIONS__NOTIFICATION__REPLIED_TO_GROUP_CONVERSATION"
+                   @@NOTIFICATIONS__NOTIFICATION__REPLIED_TO_GROUP_CONVERSATION
+                "
                 *ngIf="notification.params?.is_reply"
               >
                 {{ notification.fromObj.name }} replied to your message in
@@ -358,8 +361,9 @@
             class="pseudo-link mdl-color-text--blue-grey-400"
             *ngIf="!notification.entityObj.title"
             i18n="
-              object belonging to current
-              user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT"
+               object belonging to current
+              user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT
+            "
             >your {{ notification.entityObj.subtype }}</span
           >
         </p>
@@ -471,8 +475,9 @@
             class="pseudo-link mdl-color-text--blue-grey-400"
             *ngIf="!notification.entityObj.title"
             i18n="
-              object belonging to current
-              user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT"
+               object belonging to current
+              user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT
+            "
             >your {{ notification.entityObj.subtype }}</span
           >
         </p>
@@ -493,7 +498,8 @@
         <p *ngIf="!notification.entityObj.title">
           <ng-container
             i18n="
-              @@NOTIFICATIONS__NOTIFICATION__DOWNVOTE__VOTED_DOWN_OWN_ACTIVITY"
+               @@NOTIFICATIONS__NOTIFICATION__DOWNVOTE__VOTED_DOWN_OWN_ACTIVITY
+            "
             >{{ notification.fromObj.name }} down voted
             <span class="pseudo-link mdl-color-text--blue-grey-400"
               >your activity</span
@@ -538,7 +544,8 @@
         >
           <p
             i18n="
-              @@NOTIFICATIONS__NOTIFICATION__DOWNVOTE__VOTED_DOWN_CONVERSATION"
+               @@NOTIFICATIONS__NOTIFICATION__DOWNVOTE__VOTED_DOWN_CONVERSATION
+            "
           >
             <span class="pseudo-link mdl-color-text--blue-grey-400">{{
               notification.fromObj.name
@@ -583,8 +590,9 @@
             class="pseudo-link mdl-color-text--blue-grey-400"
             *ngIf="!notification.entityObj.title"
             i18n="
-              object belonging to current
-              user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT"
+               object belonging to current
+              user@@NOTIFICATIONS__NOTIFICATION__OWN_OBJECT
+            "
             >your {{ notification.entityObj.subtype }}</span
           >
           <ng-container *ngTemplateOutlet="remindQuote"></ng-container>
@@ -836,7 +844,9 @@
         >
         <ng-container
           i18n="
-            boost@@NOTIFICATIONS__NOTIFICATION__BOOST_SUBMITTED__AWAITING_APPROVAL"
+
+            boost@@NOTIFICATIONS__NOTIFICATION__BOOST_SUBMITTED__AWAITING_APPROVAL
+          "
         >
           is awaiting approval.</ng-container
         >
@@ -896,7 +906,9 @@
         >
         <ng-container
           i18n="
-            boost@@NOTIFICATIONS__NOTIFICATION__BOOST_SUBMITTED_P2P__AWAITING_APPROVAL_BY"
+
+            boost@@NOTIFICATIONS__NOTIFICATION__BOOST_SUBMITTED_P2P__AWAITING_APPROVAL_BY
+          "
         >
           is awaiting approval by
           <span class="pseudo-link mdl-color-text--blue-grey-400"
@@ -1330,7 +1342,8 @@
       <p>
         <ng-container
           i18n="
-            @@NOTIFICATIONS__NOTIFICATION__BOOST_PEER_ACCEPTED__ACCEPTED_BID"
+             @@NOTIFICATIONS__NOTIFICATION__BOOST_PEER_ACCEPTED__ACCEPTED_BID
+          "
           ><b>@{{ notification.from.username }}</b> accepted your bid
           of</ng-container
         >
@@ -1390,7 +1403,8 @@
       <p>
         <ng-container
           i18n="
-            @@NOTIFICATIONS__NOTIFICATION__BOOST_PEER_REJECTED__DECLINED_BID"
+             @@NOTIFICATIONS__NOTIFICATION__BOOST_PEER_REJECTED__DECLINED_BID
+          "
           ><b>@{{ notification.from.username }}</b> declined your bid
           of</ng-container
         >
@@ -1717,7 +1731,9 @@
           <span
             class="pseudo-link mdl-color-text--blue-grey-400"
             i18n="
-              @@NOTIFICATIONS__NOTIFICATION__REPORT_ACTIONED__ACTIVITY_TITLE_BEEN"
+
+              @@NOTIFICATIONS__NOTIFICATION__REPORT_ACTIONED__ACTIVITY_TITLE_BEEN
+            "
             >Your post {{ notification.entityObj.title }}</span
           >
           has been {{ notification.params.action }}
