--- a/src/app/modules/plus/marketing.component.html
+++ b/src/app/modules/plus/marketing.component.html
@@ -139,7 +139,8 @@
             <br /><br />
             <ng-container
               i18n="
-                @@MARKETING_PLUS__MONTHLY_REVENUE_MODEL_SECTION__ELIGIBILITY"
+                 @@MARKETING_PLUS__MONTHLY_REVENUE_MODEL_SECTION__ELIGIBILITY
+              "
             >
               If you pay for your membership in tokens, you are only eligible to
               be paid out in tokens. If you pay in cash, you are eligible to be
