--- a/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.html
@@ -71,7 +71,8 @@
                   ><span
                     >${{ tier.usd }}+<ng-container
                       i18n="
-                        @@COMPOSER__MONETIZE_MEMBERSHIPS__SUBSCRIPTION_INTERVAL"
+                         @@COMPOSER__MONETIZE_MEMBERSHIPS__SUBSCRIPTION_INTERVAL
+                      "
                     >
                       per month</ng-container
                     ></span
