--- a/src/app/modules/groups/profile/filter-selector/filter-selector.component.html
+++ b/src/app/modules/groups/profile/filter-selector/filter-selector.component.html
@@ -5,8 +5,9 @@
       [class.m-groups--filter-selector-active]="filter == 'activity'"
       [routerLink]="['/groups/profile', group.guid, 'feed']"
       i18n="
-        group activities
-        selector|@@GROUPS__PROFILE__FILTER_SELECTOR__FEED_OPTION"
+         group activities
+        selector|@@GROUPS__PROFILE__FILTER_SELECTOR__FEED_OPTION
+      "
       >Feed</a
     >
     <a
