--- a/src/app/modules/blogs/view/view.ng.scss
+++ b/src/app/modules/blogs/view/view.ng.scss
@@ -297,4 +297,18 @@
         }*/
     }
   }
+
+  .minds-blog-ownerblock {
+    margin: 8px 0;
+
+    ::ng-deep m-hovercard {
+      .minds-avatar {
+        margin: 0px;
+      }
+    }
+
+    .minds-body {
+      margin-left: 8px;
+    }
+  }
 }
