--- a/src/app/modules/media/modal/modal.component.html
+++ b/src/app/modules/media/modal/modal.component.html
@@ -291,10 +291,7 @@
                 "
               >
                 <!-- OWNER BLOCK AVATAR -->
-                <div
-                  class="m-mediaModal__ownerBlockAvatar avatar"
-                  [hovercard]="entity.ownerObj.guid"
-                >
+                <div class="m-mediaModal__ownerBlockAvatar avatar">
                   <a [routerLink]="['/', entity.ownerObj.username]">
                     <img
                       [src]="
