--- a/src/app/common/components/publisher-card/publisher-card.component.ng.scss
+++ b/src/app/common/components/publisher-card/publisher-card.component.ng.scss
@@ -63,13 +63,31 @@
       }
     }
 
+    // ojm fix this and make sure it works with cards w/o descs
     .m-publisherCard__desc {
       p {
+        max-height: 70px;
+        overflow: hidden;
+        position: relative;
         line-height: 19px;
         font-size: 16px;
         margin: 0;
         @include m-theme() {
           color: themed($m-textColor--primary);
+        }
+        &::after {
+          content: '';
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          left: 0;
+          top: 0;
+          @include m-theme() {
+            background: linear-gradient(
+              transparent 0,
+              themed($m-bgColor--primary) 90%
+            );
+          }
         }
       }
     }
