--- a/src/app/modules/suggestions/channel/sidebar.component.html
+++ b/src/app/modules/suggestions/channel/sidebar.component.html
@@ -25,32 +25,15 @@
       <ng-container [ngSwitch]="suggestion.entity.type">
         <ng-template ngSwitchCase="user">
           <a [routerLink]="['/', suggestion.entity.username]">
-            <popper-content #popper>
-              <m-publisherCard
-                [publisher]="suggestion.entity"
-                [isHovercard]="true"
-              ></m-publisherCard>
-            </popper-content>
-
-            <div
-              class="m-suggestionsSidebarListItem__avatar"
-              [style.background-image]="
-                'url(' + cdnUrl + 'icon/' + suggestion.entity.guid + ')'
-              "
-              [popper]="popper"
-              popperPlacement="bottom"
-              showDelay="500"
-              popperTrigger="hover"
-            ></div>
-            <!-- ojm [popperHideOnMouseLeave]="false"
-              [popperShowOnStart]="true" -->
-            <div
-              class="m-suggestionsSidebarListItem__body"
-              [popper]="popper"
-              popperPlacement="bottom"
-              showDelay="500"
-              popperTrigger="hover"
-            >
+            <m-hovercard [publisher]="suggestion.entity" [offset]="[0, 15]">
+              <div
+                class="m-suggestionsSidebarListItem__avatar"
+                [style.background-image]="
+                  'url(' + cdnUrl + 'icon/' + suggestion.entity.guid + ')'
+                "
+              ></div
+            ></m-hovercard>
+            <div class="m-suggestionsSidebarListItem__body">
               <div [title]="suggestion.entity.briefdescription">
                 <h4>{{ suggestion.entity.name }}</h4>
                 <span>
