--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -65,7 +65,7 @@
       format('woff');
   unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
-// ojm don't have this file
+// File not available
 /* latin-ext */
 // @font-face {
 //   font-family: 'Roboto';
