--- a/src/app/modules/homepage-v2/homepage-v2.component.scss
+++ b/src/app/modules/homepage-v2/homepage-v2.component.scss
@@ -407,7 +407,7 @@ m-homepage__v2 {
       right: -50%;
       width: 500px;
       height: 500px;
-      background: url('http://localhost:4200//assets/marketing/deco_2.svg')
+      background: url('/assets/marketing/deco_2.svg')
         no-repeat;
       z-index: -1; // we need to layer this manually behind the phone image
 
