(fix) show metrics bar only when there are metrics

--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div
   class="m-activityToolbar__metrics"
-  *ngIf="service.displayOptions.showInteractions"
+  *ngIf="service.displayOptions.showInteractions && showMetrics"
 >
   <div
     class="m-activityToolbarMetrics__metric"
