--- a/src/app/modules/onboarding-v2/steps/info/info.component.html
+++ b/src/app/modules/onboarding-v2/steps/info/info.component.html
@@ -1,12 +1,12 @@
 <div class="m-onboarding__controls">
-  <div class="m-onboarding__control">
+  <!-- <div class="m-onboarding__control">
     <m-onboarding__phoneVerification
       [tooltipAnchor]="tooltipAnchor"
       [disabled]="phoneInputDisabled"
       #phoneVerification
     >
     </m-onboarding__phoneVerification>
-  </div>
+  </div> -->
 
   <div
     class="m-onboarding__control m-onboardingControl__location"
