--- a/src/app/modules/settings-v2/other/referrals/dashboard/dashboard.component.html
+++ b/src/app/modules/settings-v2/other/referrals/dashboard/dashboard.component.html
@@ -74,7 +74,7 @@
             m-settingsV2__referralsDashboard__dataRow
           "
         >
-          <m-hovercard [publisher]="referral.prospect">
+          <m-hovercard [publisher]="referral.prospect" [offset]="[60, 0]">
             <div
               class="
                 m-settingsV2__referralsDashboard__cell
