--- a/src/app/common/components/publisher-card/publisher-card.component.ng.scss
+++ b/src/app/common/components/publisher-card/publisher-card.component.ng.scss
@@ -63,31 +63,13 @@
       }
     }
 
-    // ojm fix this and make sure it works with cards w/o descs
     .m-publisherCard__desc {
       p {
-        max-height: 70px;
-        overflow: hidden;
-        position: relative;
-        line-height: 19px;
-        font-size: 16px;
+        line-height: 17px;
+        font-size: 15px;
         margin: 0;
         @include m-theme() {
           color: themed($m-textColor--primary);
-        }
-        &::after {
-          content: '';
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          left: 0;
-          top: 0;
-          @include m-theme() {
-            background: linear-gradient(
-              transparent 0,
-              themed($m-bgColor--primary) 90%
-            );
-          }
         }
       }
     }
@@ -204,7 +186,7 @@
   }
   .m-publisherCard--small {
     .m-publisherCard__inner {
-      max-height: 151px;
+      max-height: 155px;
       overflow: hidden;
     }
     padding: 20px;
@@ -265,13 +247,14 @@
 
     .m-readMoreButton--v2.showOnlyFadeout {
       height: 0;
+      cursor: default;
 
       @include m-theme() {
         background: linear-gradient(
           to bottom,
-          rgba(themed($m-bgColor--primary), 0) 0%,
-          rgba(themed($m-bgColor--primary), 0.7) 80%,
-          rgba(themed($m-bgColor--primary), 1) 99%
+          rgba(themed($m-bgColor--primary), 0) 55%,
+          rgba(themed($m-bgColor--primary), 0.55) 90%,
+          rgba(themed($m-bgColor--primary), 1) 100%
         );
       }
       > span {
