Prevent self subscription option in interactions modal engine#2059

--- a/src/app/modules/newsfeed/interactions-modal/interactions-modal.component.html
+++ b/src/app/modules/newsfeed/interactions-modal/interactions-modal.component.html
@@ -10,6 +10,7 @@
       <li *ngFor="let entity of entities">
         <m-publisherCard
           [publisher]="entity"
+          [disableSubscribe]="isSelf(entity.guid)"
           *ngIf="entity?.type === 'user'"
         ></m-publisherCard>
         <m-newsfeed__entity
